--- a/public/css/easel.css
+++ b/public/css/easel.css
@@ -107,6 +107,7 @@ body {
    width: 200px;
    display: block;
    margin: 25px auto;
+   height: 100%;
 }
 .discovery-page-header{
    margin: 310px 0px 0px 0px;
@@ -186,6 +187,7 @@ h4 small {
       margin: 20px 0px 0px 0px;
       font-size: 20px;
    }
+   
 }
 @media (max-width: 768px){
    .discovery-search{
